[package]
name = "LAVA"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = "4.5.32"
csv = "1.3.1"
glob = "0.3.2"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
sha2 = "0.10.8"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.20.0"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
