[package]
name = "lava"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = "4.5.32"
csv = "1.3.1"
glob = "0.3.2"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
sha2 = "0.10.8"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.20.0"
welford = "0.1.0"
comfy-table = "7.1.4"
serde_json = "1.0.140"
num-format = "0.4.4"
human-time = "0.1.6"
phf = { version = "0.12.1", features = ["macros"] }
enable-ansi-support = "0.3.1"
evtx = "0.8.5"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_EventLog",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Security",
] }
quick-xml = "0.38.3"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
